# Dragonfly

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  Makefile  PUSH_TO_DRAGONFLY.txt  README.md  autoplot.py  config.ini  config.ini.example  config2.ini.example  config_cxi.ini  dragonfly_conda.yml  dragonfly_init  get_pdb_coor.py  index.html  init_new_recon.py  low_pass_filter.py  make_detector.c  make_quaternion.c  params.json  pdb-config.py  pyproject.toml  requirements.txt  setup.py  setup_new_recon.py
aux/: atom_mass.txt  henke_data.h5  mask_pnccd_back_260_257.byt
aux/henke_table/: ac.nff  ag.nff  al.nff  ar.nff  as.nff  at.nff  au.nff  b.nff  ba.nff  be.nff  bi.nff  br.nff  c.nff  ca.nff  cd.nff  ce.nff  cl.nff  co.nff  cr.nff  cs.nff  cu.nff  dy.nff  er.nff  eu.nff  f.nff  fe.nff  fr.nff  ga.nff  gd.nff  ge.nff  h.nff  he.nff  hf.nff  hg.nff  ho.nff  i.nff  in.nff  ir.nff  k.nff  kr.nff  (+52 more)
classify/: classifier.py  converter.py
classify/source/: classes.py  conversion.py  converter.py  data.py  embedding.py  manual.py  mlp.py  polar.py
classify/themes/clearlooks/: pkgIndex.tcl
docs/: conf.py  index.rst  model.rst  quaternion.rst  rebuild.sh  utils.rst
docs/api/: detector.rst  emcfile.rst  iterate.rst  model.rst  params.rst  quaternion.rst  recon.rst
docs/user-guides/: autoplot.rst  config.rst  experimental-quickstart.rst  faq.rst  frameviewer.rst  installation.rst  simulation-quickstart.rst  simulator.rst
docs/utils/: calc_cc.rst  py_utils.rst  slices.rst
dragonfly/: __init__.py  aux  detector.pxd  detector.py  detector.pyx  emcfile.pxd  emcfile.py  emcfile.pyx  iterate.pxd  iterate.pyx  model.pxd  model.py  model.pyx  params.pxd  params.pyx  quaternion.pxd  quaternion.py  quaternion.pyx  recon.pxd  recon.pyx
dragonfly/scripts/: init_new_recon.py
dragonfly/src/: detector.h  emcfile.c  emcfile.h  iterate.c  iterate.h  max_internal.h  max_prob.c  max_scale.c  max_update.c  maximize.c  maximize.h  model.c  model.h  params.h  quat.c  quat.h  quaternion.c  quaternion.h
dragonfly/utils/: autoplot.py  autoplot_core.py  autoplot_dash.py  autoplot_mpl.py  autoplot_plotly.py  frameviewer.py  init_new_recon.py  make_data.pxd  make_data.pyx  make_densities.py  make_detector.py  make_intensities.py  sim_setup.py
dragonfly/utils/py_src/: class_phaser.py  clpca.py  frame_panel.py  phaser_gui.py  process_pdb.py  py_utils.py  read_config.py  slices.py  style.css
dragonfly/utils/src/: make_data.c
examples/: config_example.ini  simulation_workflow.py
paper/: EMC.bib  EMC.ltx  EMC.tex  documentation.ltx  fig1.ps  iucr.bib  iucr.bst  iucr.cls
paper/figures/: dataFormat.eps  emc_flowchart.eps  geometry.eps  solidAngle.eps
pyemc/: dataset.pxd  dataset.pyx  decl.pxd  detector.pxd  detector.pyx  emc.pxd  emc.pyx  interp.pyx  iterate.pxd  iterate.pyx  max_emc.pxd  max_emc.pyx  params.pxd  params.pyx  pyemc.pxd  pyemc.pyx  quat.pxd  quat.pyx  recon_emc.pxd  setup.py  unit.py
sample_configs/: config_amo.ini  config_amo86615.ini  config_cxi.ini  testing.ini
src/: dataset.c  dataset.h  detector.c  detector.h  emc.h  interp.c  interp.h  iterate.c  iterate.h  max.c  max_emc.c  output_emc.c  params.c  params.h  quat.c  quat.h  recon.c  recon_emc.c  setup.c  setup_emc.c  utils.c  utils.h
utils/: CMakeLists.txt  autoplot.py  autoplot_unstable.py  check_exp_config.py  classifier.py  frameviewer.py  get_pdb_coor.py  h5toemc.py  init_new_recon.py  make_densities.py  make_detector.py  make_intensities.py  pdb-config.py  powder.py  run_emc.py  run_tests.sh  sim_setup.py
utils/convert/: .pylintrc  cheetahtodet.py  condortodet.py  condortoemc.py  geomtodet.py  h5toemc.py  h5toemc_psim.py  h5toemc_spi.py  h5toemc_spi2.py  h5toemc_spigijs.py  hitstoemc.py  psanatodet.py
utils/cython/: common.h  dataset.pyx  detector.pyx  emc.pxd  emc.pyx  iterate.pxd  iterate.pyx  quat.pyx  setup.py
utils/deprecated/: low_pass_filter.py  pdb-config.py  quat.sh  quatgen.c
utils/py_src/: calc_cc.py  class_phaser.py  classes.py  clpca.py  conversion.py  data.py  detector.py  embedding.py  frame_panel.py  gui_utils.py  manual.py  mlp.py  phaser_gui.py  polar.py  process_pdb.py  py_utils.py  read_config.py  readdet.py  reademc.py  readvol.py  slices.py  style.css  writeemc.py
utils/src/: compare.c  cosmic.c  expected.c  fiberize.c  genxtal.c  heterogen.c  hkli.c  make_data.c  make_detector.c  make_intensity.c  make_quaternion.c  merge.c
