file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/utils)
file(GLOB utils_src "src/*.c")
foreach(src ${utils_src})
	string(REGEX REPLACE ".*/src/(.*).c" "\\1" util ${src})
	list(APPEND c_utils ${util})
	
	add_executable(${util} ${src})
	target_link_libraries(${util} GSL::gsl GSL::gslcblas)
	target_link_libraries(${util} m)
endforeach(src)

# Add specific object libraries for different utilities
target_sources(merge PUBLIC $<TARGET_OBJECTS:detector.o> $<TARGET_OBJECTS:dataset.o> $<TARGET_OBJECTS:interp.o> $<TARGET_OBJECTS:iterate.o>)
target_sources(cosmic PUBLIC $<TARGET_OBJECTS:detector.o> $<TARGET_OBJECTS:dataset.o>)
target_sources(make_data PUBLIC $<TARGET_OBJECTS:detector.o> $<TARGET_OBJECTS:interp.o>)
target_sources(fiberize PUBLIC $<TARGET_OBJECTS:detector.o> $<TARGET_OBJECTS:interp.o>)
target_sources(compare PUBLIC $<TARGET_OBJECTS:quat.o> $<TARGET_OBJECTS:interp.o>)
target_sources(make_quaternion PUBLIC $<TARGET_OBJECTS:quat.o>)
if(HDF5_FOUND)
	target_link_libraries(merge ${HDF5_C_LIBRARIES})
	target_link_libraries(cosmic ${HDF5_C_LIBRARIES})
	target_link_libraries(make_data ${HDF5_C_LIBRARIES})
	target_link_libraries(fiberize ${HDF5_C_LIBRARIES})
endif()

# Install C and Python utilities
file(GLOB py_utils "*.py")
file(GLOB py_src "py_src/*.py" "py_src/style.css")
install(TARGETS ${c_utils} DESTINATION dragonfly/utils)
install(PROGRAMS ${py_utils} DESTINATION dragonfly/utils)
install(FILES ${py_src} DESTINATION dragonfly/utils/py_src)
